	PR c++/39371 	* semantics.c (finish_switch_cond): Don't call get_unwidened. 	* decl.c (finish_case_label): Pass SWITCH_STMT_TYPE as 3rd argument 	instead of TREE_TYPE (cond).

* g++.dg/opt/switch2.C: Add -w to dg-options.
	* g++.dg/warn/Wswitch-1.C: Adjust expected warnings.
	* g++.dg/warn/switch1.C: New test.
	* g++.dg/other/switch3.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@144732 138bc75d-0d04-0410-961f-82ee72b054a4